corrected text-alignment in hamburger menu

--- a/src/Layout/Francais/Header/header.scss
+++ b/src/Layout/Francais/Header/header.scss
@@ -170,6 +170,9 @@ header {
                 @media screen and (max-width: 1199px) {
                     font-size: 1.6rem;
                 }
+                @media screen and (max-width: 768px) {
+                    text-align: center;
+                }
             }
             li:hover {
                 color: $secondary-color;
@@ -179,6 +182,10 @@ header {
                 height: 20px;
                 display: flex;
                 margin-left: auto;
+                @media screen and (max-width: 768px) {
+                    margin-right: auto;
+                }
+
             }
         }
     }
